<resources>
    <string name="app_name">Формула</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Welcome to Algebra!</string>
    <string name="welcome_geometry">Welcome Geometry!</string>
    <string name="welcome_page">Бул “Математикалык формулалар жыйнагы” тиркемеси мектеп окуучуларына жана студенттерге арналган. Колдонуучуларга түшүнүктүү  жана ыңгайлуу даяр шпаргалка.</string>
    <string name="algebra">Алгебра</string>
    <string name="geometry">Геометрия</string>
    <string name="trigonometriya">Тригонометрия</string>
    <string name="integral">Интеграл</string>
    <string name="test">Тест</string>
    <string name="barabarsyzdyk">Барабарсыздыктар</string>
    <string name="bashkybet">Башкы бет</string>
</resources>
