<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homePage"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/bashkybet" />
        <item
            android:id="@+id/algebra"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/algebra" />
        <item
            android:id="@+id/geometry"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/geometry" />
        <item
            android:id="@+id/trigonometry"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/trigonometriya" />
        <item
            android:id="@+id/integral"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/integral" />
        <item
            android:id="@+id/barabarsyzdyk"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/barabarsyzdyk" />
        <item
            android:id="@+id/test"
            android:icon="@drawable/ic_menu_check_black"
            android:title="@string/test" />


    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
